Updated our CSV file and made our documentation